8943
Oh, but I see now that type constructor inference is useless when combined variance - it appears to always choose Any/Nothing for the type argument if it can. Oh, in that case the invariant version is actually failing in the correct way. The 2.9 version also fails, but for the wrong reason.
{code}
test/files/pos/t6846.scala:25: error: type mismatch;
 found   : Test2.Carb[List[Int]]
 required: Test2.Carb[Test2.ListSingletonX]
Note: List[Int] >: Test2.ListSingletonX, but class Carb is invariant in type _.
You may wish to define _ as -_ instead. (SLS 4.5)
  bar: Carb[ListSingletonX]
  ^
test/files/pos/t6846.scala:26: error: type mismatch;
 found   : Test2.Carb[List[Int]]
 required: Test2.Carb[Test2.ListSingletonY]
Note: List[Int] >: Test2.ListSingletonY, but class Carb is invariant in type _.
You may wish to define _ as -_ instead. (SLS 4.5)
  bar: Carb[ListSingletonY]
  ^
two errors found
{code}
